[gd_scene load_steps=12 format=3 uid="uid://co873sb4koma3"]

[ext_resource type="FontFile" uid="uid://d14b6gyntdr4e" path="res://fonts/ubuntu/ubuntu-bold.ttf" id="1_4e5oi"]
[ext_resource type="Script" path="res://scripts/ui/battle/popup_with_assault/popup_with_assault.gd" id="1_ymju7"]
[ext_resource type="FontFile" uid="uid://cqgufl6eexceh" path="res://fonts/ubuntu/ubuntu-regular.ttf" id="2_7kvns"]
[ext_resource type="Texture2D" uid="uid://d3op6bt1c5kon" path="res://sprites/ui/battle/actions_dice/icons/attack_dice.svg" id="3_rfkmi"]
[ext_resource type="Texture2D" uid="uid://dr0pt8402f60q" path="res://sprites/ui/battle/actions_dice/icons/block_dice.svg" id="4_11l5i"]
[ext_resource type="Texture2D" uid="uid://m3jljc3axjbi" path="res://sprites/ui/battle/actions_dice/icons/evade_dice.svg" id="5_vlwts"]
[ext_resource type="Texture2D" uid="uid://yjndvqstn00w" path="res://sprites/ui/battle/actions_dice/icons/counte_dice.svg" id="6_pabbo"]

[sub_resource type="LabelSettings" id="LabelSettings_71tky"]
font = ExtResource("2_7kvns")
font_size = 20
font_color = Color(0.960784, 0.960784, 0.960784, 1)
shadow_size = 0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_unafs"]
resource_local_to_scene = true
frames = 4
pause = true
one_shot = true
frame_0/texture = ExtResource("3_rfkmi")
frame_1/texture = ExtResource("4_11l5i")
frame_1/duration = 0.0
frame_2/texture = ExtResource("5_vlwts")
frame_2/duration = 0.0
frame_3/texture = ExtResource("6_pabbo")
frame_3/duration = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8e402"]
bg_color = Color(0.13, 0.17, 0.25, 0.7)
border_color = Color(0.960784, 0.960784, 0.960784, 1)
corner_radius_top_right = 2
expand_margin_left = 10.0
expand_margin_right = 3.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8nki"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 5
border_color = Color(0.960784, 0.960784, 0.960784, 1)
corner_radius_top_right = 1
expand_margin_left = 10.0
expand_margin_right = 3.0
anti_aliasing_size = 2.0

[node name="PopupWithAssault" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ymju7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_top = 28.0
offset_right = 94.0
offset_bottom = 118.0
theme_override_constants/separation = -3
alignment = 2

[node name="CurrentUse" type="VBoxContainer" parent="HBoxContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 0

[node name="Value" type="Label" parent="HBoxContainer/CurrentUse"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4e5oi")
theme_override_font_sizes/font_size = 64
text = "18"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Panel" type="Panel" parent="HBoxContainer/CurrentUse"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CurrentUse/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillIcon" type="TextureRect" parent="HBoxContainer/CurrentUse/Panel/CenterContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
expand_mode = 1

[node name="Dice" type="VBoxContainer" parent="HBoxContainer/CurrentUse/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="DiceRange" type="Label" parent="HBoxContainer/CurrentUse/Panel/CenterContainer/Dice"]
layout_mode = 2
size_flags_vertical = 0
text = "98-99"
label_settings = SubResource("LabelSettings_71tky")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DiceIcon" type="TextureRect" parent="HBoxContainer/CurrentUse/Panel/CenterContainer/Dice"]
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
texture = SubResource("AnimatedTexture_unafs")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 88

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8e402")

[node name="Line" type="Panel" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r8nki")

[node name="SkillTitle" type="Label" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Skill Title"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="DicePool" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
